# vrc-stuff

./: .gitignore  Cargo.toml  README.md  b  justfile  vpmrelease.py
.github/workflows/: deploy.yml
KVToolsTB/: .gitignore  CompilationProfiles-example.cfg  GameConfig.cfg  kvtoolstb.fgd
book-experiments/: README.md
book-experiments/drawbook/: .gitignore  Cargo.toml  b  v
book-experiments/testbook/: cam.gd  pagerender.gd  pagerendermaterial.tres  project.godot
docs/udon/: EDITOR.md  README.md  copy-example  docExample.asset  docExample.odin.json  helloWorld.odin.json  helloWorld.uasm  legacy.md
kip32/: .gitignore  ABI.md  Cargo.toml  README.md  compile_flags.txt  science.c
kip32/elf2uasm/: Cargo.toml
kip32/elf2uasm/src/: builtin.ron  externs.rs  main.rs  wrapper.rs
kip32/elf2uasm_lib/: Cargo.toml
kip32/kip32corestub/: Cargo.toml
kip32/kudonast/: .gitignore  Cargo.toml  meld-cc
kip32/kudonast/examples/: udonast2odinast.rs  udonastc.rs
kip32/kudonast/src/: docExample.ron  emit_odin.rs  emit_uasm.rs  lib.rs  tests.rs
kip32/kudoninfo/: Cargo.toml
kip32/kudonodin/: Cargo.toml
kip32/kudonwriter/: Cargo.toml
kip32/micropython/: .gitignore  Makefile  README.md  compile_flags.txt  copyright-collator  filter-picolibc-copyright  main.c  modgimmicks.c  mpconfigport.h  mphalport.h  save-from-port  terminal.ron
kip32/rustsdk/: Cargo.toml  README.md
kip32/sdk/: .gitignore  README.md  clean  configure  elf2uasm  kip32-libcqemu-gcc  kip32-udon-gcc  kip32.ld  kip32_udon.specs  kip32cc  libcqemu.specs  recipe  stdsyscall.ron
kip32/testing/: .gitignore  RandTest.java  format_tests.h  genrefdata.c  genrefdata.h  libctest.c  muldiv.S  muldiv.h  qemu.S  qemu.h  qemu_stdio.c  science.c  test_weird.c  testlibc.c  testlibc.h  tiolib.c
kip32/tools/kip32corestub/: Cargo.toml
kip32/tools/kip32corestub/src/: coredump_udon.rs  target.rs
kvassets/: package.json
kvassets/Assets/: .gitignore  commonPropsMaterial.mat  docExample.asset  licenseDisplay.prefab  reflectionTestingMaterial.mat  reflectionTestingObject.prefab  validate.uasm
kvbook/: Cargo.toml  FORMAT.md  README.md
kvbook/booklib/: Cargo.toml
kvbook/drawbook/: .gitignore  Cargo.toml  about.hbs  about.toml  b  bp  i  test_metadata.json  v
kvbook/drawbook/src/: atlas_builder.rs  docmodel.rs  fileout.rs  geom.rs  geom_atlas.rs  main.rs  progress.rs  render_svg.rs  rendered.rs  sdf.rs
kvbook/geomlib/: Cargo.toml
kvbook/inputlib/: Cargo.toml
kvbook/pkg/: package.json
kvbook/svgseparator/: Cargo.toml  b
kvbook/testbook/: app_processor.gd  app_processor.tscn  app_processor_test.gd  app_processor_test.tscn  app_starter.gd  app_viewer.gd  app_viewer.tscn  cam.gd  drawbook  entry.tscn  export_presets.cfg  mt_debug.gd  pagerender.gd  pagerendermaterial.tres  pagerendershader.tres  project.godot
kvbsp/: README.md  Setup.asset  package.json
kvbsp/Assets/: builtinWorkspace.asset  missingEntity.mat  missingEntity.prefab  missingMaterial.asset  missingMaterial.mat
kvbsp/Editor/: IKDCBSPEntityParameterizer.cs  KDCBSPAbstractMaterialConfig.cs  KDCBSPAbstractWorkspaceConfig.cs  KDCBSPBaseImporter.cs  KDCBSPImportContext.cs  KDCBSPImporter.cs  KDCBSPIntermediate.cs  KDCBSPMapImporter.cs  KDCBSPMaterialConfig.cs  KDCBSPNonImportAssetContext.cs  (+9 more)
kvresearch/: package.json
kvtools/: package.json
kvworkarounds/: package.json
mdbook/: .gitignore  b  book.toml
qroot/: CompilationProfiles.cfg
site/: b
udon/: Cargo.toml  README.md
udon/kudon_apijson/: Cargo.toml
udon/kudon_apijson/src/: api_c.json.xz  lib.rs
udon/kudonasm/: Cargo.toml  README.md
udon/kudonasm/src/: card.ron  decoded.rs  equate_stack.rs  heapconv.rs  lib.rs  librarian.rs  parsing.rs
udon/kudoninfo/: Cargo.toml  build.rs
udon/kudoninfo/examples/: info_dump.rs
udon/kudoninfo/src/: externs.rs  extlookup.rs  lib.rs  opcode.rs  refs.rs  tests.rs  trivial.rs  types.rs
udon/kudonknife/: Cargo.toml
udon/kudonknife/src/: main.rs
vpm/: index.json
vrc-sigmar/: README.md  board-and-markers.prefab  board.fbx  brightTextMaterial.mat  game-pickup.prefab  game.prefab  gameScript.asset  manual.fbx  manual.prefab  manualMarble.prefab  manualSetParentMRS.asset  marble.prefab  marbleRenderer.prefab  marbleRendererScript.asset  marbleScript.asset  notebook.txt  package.json  phytocore.uasm  randomBoardStoreScript.asset  sigmar-material.mat  uiControlScript.asset
vrc-textslidesystem/: interface.asset  package.json  textslidesystem.prefab
(+635 files in other folders)
