[workspace.package]
publish = false
version = "0.1.0"
edition = "2024"
authors = ["20kdc"]
license = "Unlicense"

[workspace]
resolver = "2"
members = [
    "kip32/kip32ingest",
    "kip32/elf2uasm",
    "udon/kudonast",
    "udon/kudonodin",
    "udon/kudoninfo",
    "udon/kudon_apijson",
    "udon/kudonasm"
]

