[package]
name = "elf2uasm"
publish.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
lexopt = "0.3.1"
kip32ingest = { path = "../kip32ingest" }
kudonast = { path = "../../udon/kudonast" }
