[package]
name = "kudonast"
publish.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kudoninfo = { path = "../kudoninfo" }
kudonodin = { path = "../kudonodin" }
serde = { version = "1.0.228", features = ["derive"] }
