[package]
name = "kudonast"
publish.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
flate2 = "1.1.9"
json = "0.12.4"
kudoninfo = { path = "../kudoninfo" }
kudonodin = { path = "../kudonodin" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
ron = "0.12.0"
