[package]
name = "drawbook"
publish.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
json = "0.12.4"
lexopt = "0.3.2"
rayon = "1.12.0"
resvg = { version = "0.47.0", default-features = false, features = ["raster-images"] }
tiny-skia = "0.12.0"
usvg = { version = "0.47.0", default-features = false, features = [] }
booklib = { path = "../booklib" }
geomlib = { path = "../geomlib" }
inputlib = { path = "../inputlib" }
svgseparator = { path = "../svgseparator" }
base64 = "0.22.1"
