[package]
name = "kudon_apijson"
description = "Compressed embedded copy of an Udon API listing. Used as the source of truth for kudoninfo."
publish.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
flate2 = "1.1.9"
json = "0.12.4"
xz = "0.1.0"
