[package]
name = "kudonasm"
publish.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kudoninfo = { path = "../kudoninfo" }
kudonodin = { path = "../kudonodin" }
kudonast = { path = "../kudonast" }
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12.0"
