[package]
name = "kudonknife"
publish.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kudonast = { path = "../kudonast" }
kudonasm = { path = "../kudonasm" }
kudonodin = { path = "../kudonodin" }
ron = "0.12.0"
json = "0.12.4"
